--- a/content/post/2019/05/2019-05-04-may-4th.md
+++ b/content/post/2019/05/2019-05-04-may-4th.md
@@ -15,7 +15,7 @@ coverImage: /images/2019/05/04/union_sq.jpeg
 metaAlignment: center
 ---
 
-Weekly shots - May the 4th (be with you)..
+Weekly shots - .. (be with you)
 <!--more-->
 
 最近读了Twyla Tharp的[The Creative Habit](https://www.goodreads.com/book/show/254799.The_Creative_Habit),很受启发。我决定每天下班回家的时候，在纽约的街头多走走，用随身的手机街拍。每周六就节选出比较好的照片发到这里来，作为岁月的留念。
