update pic title

--- a/content/post/2019/08/2019-08-18-weekly.md
+++ b/content/post/2019/08/2019-08-18-weekly.md
@@ -23,8 +23,8 @@ Weekly visual project - 2019/08/18
 {{< image classes="fancybox fig-100" src="/images/2019/08/18/bikes.JPG" thumbnail="/images/2019/08/18/thumbnail/bikes.JPG" title="↑Bikes" >}}
 {{< image classes="fancybox fig-50" src="/images/2019/08/18/cube1.JPG" thumbnail="/images/2019/08/18/thumbnail/cube1.JPG" title="↑Cube1" >}}
 {{< image classes="fancybox fig-50" src="/images/2019/08/18/cube2.JPG" thumbnail="/images/2019/08/18/thumbnail/cube2.JPG" title="↑Cube2" >}}
-{{< image classes="fancybox fig-50" src="/images/2019/08/18/ice_cream1.JPG" thumbnail="/images/2019/08/18/thumbnail/ice_cream1.JPG" title="↑Ice Cream" >}}
-{{< image classes="fancybox fig-50" src="/images/2019/08/18/ice_cream2.JPG" thumbnail="/images/2019/08/18/thumbnail/ice_cream2.JPG" title="↑Ice Cream" >}}
+{{< image classes="fancybox fig-50" src="/images/2019/08/18/ice_cream2.JPG" thumbnail="/images/2019/08/18/thumbnail/ice_cream2.JPG" title="↑Sundaes" >}}
+{{< image classes="fancybox fig-50" src="/images/2019/08/18/ice_cream1.JPG" thumbnail="/images/2019/08/18/thumbnail/ice_cream1.JPG" title="↑Cones" >}}
 {{< image classes="fancybox fig-100" src="/images/2019/08/18/windows.JPG" thumbnail="/images/2019/08/18/thumbnail/windows.JPG" title="↑Windows" >}}
 
 
