--- a/content/post/2019/09/2019-09-07-weekly.md
+++ b/content/post/2019/09/2019-09-07-weekly.md
@@ -9,7 +9,7 @@ tags:
 - photography
 slug: 2019 09 07 visual project
 autoThumbnailImage: true
-thumbnailImagePosition: right
+thumbnailImagePosition: right0
 thumbnailImage: /images/2019/09/07/thumbnail/biker.JPG
 coverImage: /images/2019/09/07/reflection.JPG
 metaAlignment: center
@@ -17,7 +17,7 @@ metaAlignment: center
 
 Weekly visual project - 2019/09/07
 <!--more-->
-<!-- toc -->
+<!--toc-->
 
 # The street
 {{< image classes="fancybox fig-50" src="/images/2019/09/07/walk.JPG" thumbnail="/images/2019/09/07/thumbnail/walk.JPG" title="↑Walk" >}} 
