--- a/content/post/2019/09/2019-09-07-weekly.md
+++ b/content/post/2019/09/2019-09-07-weekly.md
@@ -9,7 +9,7 @@ tags:
 - photography
 slug: 2019 09 07 visual project
 autoThumbnailImage: true
-thumbnailImagePosition: right0
+thumbnailImagePosition: right
 thumbnailImage: /images/2019/09/07/thumbnail/biker.JPG
 coverImage: /images/2019/09/07/reflection.JPG
 metaAlignment: center
