--- a/content/post/2019/09/2019-09-15-weekly.md
+++ b/content/post/2019/09/2019-09-15-weekly.md
@@ -29,5 +29,7 @@ Weekly visual project - 2019/09/15
 {{< image classes="fancybox fig-100" src="/images/2019/09/15/widow.JPG" thumbnail="/images/2019/09/15/thumbnail/widow.JPG" title="↑widow" >}}
 
 # The excerpt
-> ...   
-Excerpt From: 
+> 什么是悲观主义？我以为就是“透”观主义。不要着眼于“悲”，要着眼于“观”——万事万物都会过去的，人是要死的，欲望永远不能满足，太阳底下无新事……这就是悲观。悲观主义是一个态度，是一个勇敢的人的态度。   
+得不到快乐，很快乐，这就是悲观主义。如此就有自知之明，知人之明，知物之明，知世之明。   
+一切都无可奈何，难过的，但是透彻。   
+Excerpt From: 木心. “文学回忆录.” 
