--- a/content/post/2019/11/2019-11-02-weekly.md
+++ b/content/post/2019/11/2019-11-02-weekly.md
@@ -25,7 +25,7 @@ Weekly visual project - 2019/11/02
 
 {{< image classes="fancybox fig-100" src="/images/2019/11/02/leaves.JPG" thumbnail="/images/2019/11/02/thumbnail/leaves.JPG" title="↑leaves" >}}
 {{< image classes="fancybox fig-100" src="/images/2019/11/02/oh.JPG" thumbnail="/images/2019/11/02/thumbnail/oh.JPG" title="↑oh" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/11/02/reflection.JPG" thumbnail="/images/2019/11/02/thumbnail/reflection.JPG" title="↑reflection" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/02/reflection.JPG" thumbnail="/images/2019/11/02/thumbnail/reflection.JPG" title="↑grape tree" >}}
 
 * shot by [Leica M9|Zeiss 50mm f/1.5]
 
