remove .JPG in title

--- a/content/post/2019/11/2019-11-24-weekly.md
+++ b/content/post/2019/11/2019-11-24-weekly.md
@@ -20,27 +20,27 @@ Weekly visual project - 2019/11/24
 <!--toc-->
 
 # The street
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/aisle.JPG" thumbnail="/images/2019/11/24/thumbnail/aisle.JPG" title="↑aisle.JPG" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/fish market.JPG" thumbnail="/images/2019/11/24/thumbnail/fish market.JPG" title="↑fish market.JPG" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/truckman.JPG" thumbnail="/images/2019/11/24/thumbnail/truckman.JPG" title="↑truckman.JPG" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/aisle.JPG" thumbnail="/images/2019/11/24/thumbnail/aisle.JPG" title="↑aisle" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/fish market.JPG" thumbnail="/images/2019/11/24/thumbnail/fish market.JPG" title="↑fish market" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/truckman.JPG" thumbnail="/images/2019/11/24/thumbnail/truckman.JPG" title="↑truckman" >}}
 
 # The subway
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/enjoy.JPG" thumbnail="/images/2019/11/24/thumbnail/enjoy.JPG" title="↑enjoy.JPG" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/stare.JPG" thumbnail="/images/2019/11/24/thumbnail/stare.JPG" title="↑stare.JPG" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/wait.JPG" thumbnail="/images/2019/11/24/thumbnail/wait.JPG" title="↑wait.JPG" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/enjoy.JPG" thumbnail="/images/2019/11/24/thumbnail/enjoy.JPG" title="↑enjoy" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/stare.JPG" thumbnail="/images/2019/11/24/thumbnail/stare.JPG" title="↑stare" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/wait.JPG" thumbnail="/images/2019/11/24/thumbnail/wait.JPG" title="↑wait" >}}
 
 # The shadow
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/shadow1.JPG" thumbnail="/images/2019/11/24/thumbnail/shadow1.JPG" title="↑shadow1.JPG" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/shadow2.JPG" thumbnail="/images/2019/11/24/thumbnail/shadow2.JPG" title="↑shadow2.JPG" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/shadow3.JPG" thumbnail="/images/2019/11/24/thumbnail/shadow3.JPG" title="↑shadow3.JPG" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/shadow1.JPG" thumbnail="/images/2019/11/24/thumbnail/shadow1.JPG" title="↑shadow1" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/shadow2.JPG" thumbnail="/images/2019/11/24/thumbnail/shadow2.JPG" title="↑shadow2" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/shadow3.JPG" thumbnail="/images/2019/11/24/thumbnail/shadow3.JPG" title="↑shadow3" >}}
 
 # The children
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/hand in hand 1.JPG" thumbnail="/images/2019/11/24/thumbnail/hand in hand 1.JPG" title="↑hand in hand 1.JPG" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/hand in hand 2.JPG" thumbnail="/images/2019/11/24/thumbnail/hand in hand 2.JPG" title="↑hand in hand 2.JPG" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/hand in hand 3.JPG" thumbnail="/images/2019/11/24/thumbnail/hand in hand 3.JPG" title="↑hand in hand 3.JPG" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/hand in hand 1.JPG" thumbnail="/images/2019/11/24/thumbnail/hand in hand 1.JPG" title="↑hand in hand 1" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/hand in hand 2.JPG" thumbnail="/images/2019/11/24/thumbnail/hand in hand 2.JPG" title="↑hand in hand 2" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/hand in hand 3.JPG" thumbnail="/images/2019/11/24/thumbnail/hand in hand 3.JPG" title="↑hand in hand 3" >}}
 
 # The pigeon
-{{< image classes="fancybox fig-100" src="/images/2019/11/24/pigeon.JPG" thumbnail="/images/2019/11/24/thumbnail/pigeon.JPG" title="↑pigeon.JPG" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/11/24/pigeon.JPG" thumbnail="/images/2019/11/24/thumbnail/pigeon.JPG" title="↑pigeon" >}}
 
 # The excerpt
 >I have always looked upon the task of a scientist as bearing the responsibility for persuading his contemporaries of the cogency and validity of his thinking. He isn’t entitled to a warm reception. He has to earn it, whether by the skill of his exposition, the novelty of his ideas, or what.   
