--- a/content/post/2019/12/2019-12-21-weekly.md
+++ b/content/post/2019/12/2019-12-21-weekly.md
@@ -27,7 +27,7 @@ Weekly visual project - 2019/12/21
 
 - 第一卷试的黑白卷，Ilford Delta 100
 - 定影液：Adox Rodinal Film Developer (500 ml)
-- 显影液：Iflord Rapid Fixer
+- 显影液：Ilford Rapid Fixer
 - 洗卷罐：Paterson Universal Tank with Two Reels
 - 暗袋：Kalt Changing Bag
 - 量具：Paterson 32-oz Beaker & Kalt Plastic Graduate 2 oz - 50 cc
