update chinese posts

--- a/content/gallery/digital/2019/07/14/2019-07-14-weekly.zh.md
+++ b/content/gallery/digital/2019/07/14/2019-07-14-weekly.zh.md
@@ -8,6 +8,7 @@ categories:
 tags:
 - street photography
 - generative art
+- chinese
 slug: 2019 07 14 visual project
 autoThumbnailImage: true
 thumbnailImagePosition: right
@@ -15,6 +16,10 @@ featured_image: 2019/07/14/thumbnail/reflection.JPG
 coverImage: /images/2019/07/14/reflection.JPG
 metaAlignment: center
 ---
+
+# The generative
+
+如[上篇博客]({{< ref "/posts/2019/07/2019-07-09-engineering-is-magic.zh.md" >}})所说，我决定在今后的weekly visual project中加入generative art的部分，以程序作画笔来绘制些视觉效果。下面的这张图是利用P5.js实现Jared Tarbell在2003年的作品[Substrate](http://www.complexification.net/gallery/machines/substrate/)。绘制过程本身是动态的，可以[点击这里]({{< ref "/posts/2019/07/2019-07-09-engineering-is-magic.zh.md#substrate" >}})查看。
 
 # The excerpt
 
