--- a/content/posts/2017/2017-01-17-pentax-k70.zh.md
+++ b/content/posts/2017/2017-01-17-pentax-k70.zh.md
@@ -8,6 +8,7 @@ categories:
 tags:
 - camera
 - pentax
+- chinese
 slug: pentax k70
 thumbnailImagePosition: center
 featured_image: 2017/2017-01-17-pentax-k70/6-3.jpg
