--- a/content/posts/2017/2017-05-08-pentax-kp.zh.md
+++ b/content/posts/2017/2017-05-08-pentax-kp.zh.md
@@ -8,6 +8,7 @@ categories:
 tags:
 - camera
 - pentax
+- chinese
 slug: pentax kp
 thumbnailImagePosition: center
 featured_image: 2017/2017-05-08-pentax-kp/1-1t.jpg
