--- a/content/gallery/film/2020/01/12/2020-01-12-weekly.md
+++ b/content/gallery/film/2020/01/12/2020-01-12-weekly.md
@@ -10,9 +10,8 @@ tags:
 - leica
 - film
 slug: "2020 01 12 Weekly Visual Project"
-autoThumbnailImage: true
-thumbnailImagePosition: right
 featured_image: 2020/01/12/subway.JPG
+hideToc: true
 ---
 
 Weekly visual project - 2020/01/12
