--- a/content/gallery/film/2019/12/21/2019-12-21-weekly.md
+++ b/content/gallery/film/2019/12/21/2019-12-21-weekly.md
@@ -9,12 +9,9 @@ tags:
 - street photography
 - leica
 - film
+- ilford
 slug: "2019 12 21 Weekly Visual Project"
-autoThumbnailImage: true
-thumbnailImagePosition: right
 featured_image: 2019/12/21/thumbnail/fan.PNG
-coverImage: /images/2019/12/21/flags.PNG
-metaAlignment: center
 ---
 
 Weekly visual project - 2019/12/21
