--- a/content/gallery/film/2020/01/12/2020-01-12-weekly.md
+++ b/content/gallery/film/2020/01/12/2020-01-12-weekly.md
@@ -9,6 +9,7 @@ tags:
 - street photography
 - leica
 - film
+- ilford
 slug: "2020 01 12 Weekly Visual Project"
 featured_image: 2020/01/12/subway.JPG
 hideToc: true
