--- a/content/gallery/film/2020/01/18/2020-01-18-weekly.md
+++ b/content/gallery/film/2020/01/18/2020-01-18-weekly.md
@@ -11,7 +11,7 @@ tags:
 - film
 - ilford
 slug: "2020 01 18 Weekly Visual Project"
-featured_image: 2020/01/18/hf5_dummy.jpg
+featured_image: 2020/01/18/hp5_dummy.jpg
 ---
 
 Weekly visual project - 2020/01/18
