--- a/content/posts/2020/01/2020-01-18-delta-vs-hf5.zh.md
+++ b/content/posts/2020/01/2020-01-18-delta-vs-hf5.zh.md
@@ -2,13 +2,14 @@
 title: "扫描仪，胶卷和小众软件"
 date: 2020-01-18T14:28:45-05:00
 categories:
-- visual
+- thoughts
 tags:
 - street photography
 - leica
 - film
 - ilford
 - nikon
+- code
 slug: "2020 01 18 Delta HP5 and VueScan"
 featured_image: 2020/01/18/hp5_branches.jpg
 ---
