--- a/content/posts/2020/01/2020-01-18-delta-vs-hf5.zh.md
+++ b/content/posts/2020/01/2020-01-18-delta-vs-hf5.zh.md
@@ -68,4 +68,4 @@ Hamrick Software is a father and son team: Ed Hamrick and his son David Hamrick.
 1. Ed做这款软件的初衷只是因为自己喜欢摄影，想得到比扫描仪配套软件更好的图像
 2. 在特定小众领域做到极致，还能以此挣点买菜钱
 3. 一个厉害的程序员能以一己之力开拓/维护一片市场（感谢Ed，要不然这些古旧的扫描仪现在都得成废铁。。）
-4. 工程师的内核，就是解决问题。越厉害的工程师，解决问题的能力就越强。
+4. 工程师的内核是解决问题。
