test using new one-by-one mode

--- a/content/gallery/digital/2020/02/16/2020-02-16-weekly.md
+++ b/content/gallery/digital/2020/02/16/2020-02-16-weekly.md
@@ -9,7 +9,24 @@ tags:
 - street photography
 slug: "2020 02 16 Weekly Visual Project"
 featured_image: 2020/02/16/phone.jpg
+type: gallery
+mode: one-by-one #at-once
+images:
+    - image: phone.jpg
+      caption: phone call
+    - image: stare.jpg
+      caption: stand and stare
+    - image: sit.JPG
+      caption: sit and stare
+    - image: tough.JPG
+      caption: tough?
+    - image: trash.jpg
+      caption: trash bin
+    - image: sunset.jpg
+      caption: sunset
 ---
 
 Weekly visual project - 2020/02/16
 <!--more-->
+
+Shot by Leica M9 and iPhone X.
