--- a/content/gallery/film/2020/01/18/2020-01-18-weekly.md
+++ b/content/gallery/film/2020/01/18/2020-01-18-weekly.md
@@ -17,6 +17,8 @@ featured_image: 2020/01/18/hp5_dummy.jpg
 Weekly visual project - 2020/01/18
 <!--more-->
 
+Film: Ilford HP5 Plus 400 & Ilford Delta 100
+
 # The excerpt
 > 暴力的语言、粗糙的语言必然会导致暴力的思维、粗糙的思维。      
 Excerpt From:  周濂. “正义的可能”
