--- a/content/gallery/film/2020/02/08/2020-02-08-weekly.md
+++ b/content/gallery/film/2020/02/08/2020-02-08-weekly.md
@@ -14,6 +14,8 @@ featured_image: 2020/02/08/pigeon.jpg
 Weekly visual project - 2020/02/08
 <!--more-->
 
+Film: Ilford HP5 Plus 400
+
 # The excerpt
 >It is impossible to enjoy idling thoroughly unless one has plenty of work to do. There is no fun in doing nothing when you have nothing to do. Wasting time is merely an occupation then, and a most exhausting one. Idleness, like kisses, to be sweet must be stolen.   
 一个人如果没有许许多多工作需要完成，就无法彻底享受懒散度日的乐趣。而一个人无事可做的时候，无所事事也失去了它原有的乐趣。于是浪费时间仅仅变成了一项任务，还是最劳心费神的任务。懒散度日的感觉就像吻一样，只有偷来的才甜美。
