--- a/content/gallery/digital/2020/03/08/2020-03-08-weekly.md
+++ b/content/gallery/digital/2020/03/08/2020-03-08-weekly.md
@@ -13,3 +13,7 @@ featured_image: 2020/03/08/subway_light_2.JPG
 
 Weekly visual project - 2020/03/08
 <!--more-->
+
+# The excerpt
+> Good taste is about really seeing the big patterns and kind of instinctively knowing what's the right way to do things.       
+Excerpt From: Linus Torvalds
