--- a/content/posts/2017/2017-05-08-pentax-kp.zh.md
+++ b/content/posts/2017/2017-05-08-pentax-kp.zh.md
@@ -30,8 +30,8 @@ metaAlignment: center
 
 # 开箱
 
-{{< img src="/images/2017/2017-05-08-pentax-kp/8-2t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/8-2t.jpg" title="↑说明书、dcu5安装盘，保修卡，宣传单，换手柄的小扳手" >}}
-{{< img src="/images/2017/2017-05-08-pentax-kp/8-3t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/8-3t.jpg" title="↑取出机身" >}}
+{{< img src="/images/2017/2017-05-08-pentax-kp/8-2t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/8-2t.jpg" caption="↑说明书、dcu5安装盘，保修卡，宣传单，换手柄的小扳手" >}}
+{{< img src="/images/2017/2017-05-08-pentax-kp/8-3t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/8-3t.jpg" caption="↑取出机身" >}}
 
 # 外观
 
@@ -75,13 +75,13 @@ metaAlignment: center
 
 * 背面
 
-{{< img src="/images/2017/2017-05-08-pentax-kp/5-3t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/5-3t.jpg" title="↑翻转屏不能反转360来自拍，但是比较方便腰平取景">}}
-{{< img src="/images/2017/2017-05-08-pentax-kp/5-4t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/5-4t.jpg" title="↑夸张的iso 819200" >}}
+{{< img src="/images/2017/2017-05-08-pentax-kp/5-3t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/5-3t.jpg" caption="↑翻转屏不能反转360来自拍，但是比较方便腰平取景">}}
+{{< img src="/images/2017/2017-05-08-pentax-kp/5-4t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/5-4t.jpg" caption="↑夸张的iso 819200" >}}
 
 * 侧面
 
-{{< img src="/images/2017/2017-05-08-pentax-kp/5-5t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/5-5t.jpg" title="↑只有一个SD卡槽差评" >}}
-{{< img src="/images/2017/2017-05-08-pentax-kp/5-7t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/5-7t.jpg" title="↑快门线和DC in接口" >}}
+{{< img src="/images/2017/2017-05-08-pentax-kp/5-5t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/5-5t.jpg" caption="↑只有一个SD卡槽差评" >}}
+{{< img src="/images/2017/2017-05-08-pentax-kp/5-7t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/5-7t.jpg" caption="↑快门线和DC in接口" >}}
 
 * 可更换手柄
 
@@ -97,7 +97,7 @@ metaAlignment: center
 
 用下来发觉最大的问题在可靠性上，首当其冲的便是脆弱的电池——前段时间去了阿拉斯加，在室外零下30°环境下相机很容易被冻没电，白天大概能坚持几十分钟，晚上可能就十几分钟，长时间曝光的话拍不了几张就自动关机。我只能不停地轮流更换手头的3块电池——每次揣两块在大衣的内兜里，等温度上来恢复电力之后再接着用（来回换电池实在太麻烦了，尤其是自拍的时候突然没电了特别火大）。本来还想测试下相机里面的星轨和延时摄影功能的，但是极地寒冷室外条件下，放十几分钟没拍几张就自动断电，根本行不通。所以最后也没能拍成星轨和延时摄影。需要提高的另一个方面就是手机app——有时候会莫名其妙的无法同步画面，且手机无法遥控释放快门，逼得最后我只能用延时自拍模式连拍10张来搞定旅行合影照。
 
-{{< img src="/images/2017/2017-05-08-pentax-kp/8-1t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/8-1t.jpg" title="↑Joby便携三脚架搭配宾得 kp" >}}
+{{< img src="/images/2017/2017-05-08-pentax-kp/8-1t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/8-1t.jpg" caption="↑Joby便携三脚架搭配宾得 kp" >}}
 
 可以看出来，在恶劣环境下可靠性主要还是被电池拖累太多。风光照当然可以拍，画质出众高感在aps-c里也是位列前茅，只是没了GPS少了追星功能还是挺可惜的。极地环境下靠三防机身倒是可以顶住阿拉斯加白天雪地里雪洒机身上的不利情况，这点还是不错的。如果就像[宣传片](https://youtu.be/Rnu4JsmmOW8)里展示的那样，拿kp配个20-40，在旅游时去拍拍扫街照，这机子还是很能胜任的。
 
