--- a/content/posts/2017/2017-01-17-pentax-k70.zh.md
+++ b/content/posts/2017/2017-01-17-pentax-k70.zh.md
@@ -31,81 +31,81 @@ metaAlignment: center
 # 参数
 
 以下是K-70的参数和基本介绍：
-{{< img src="/images/2017/2017-01-17-pentax-k70/1-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/1-1.jpg" title="参数" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/1-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/1-2.jpg" title="介绍" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/1-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/1-3.jpg" title="↑宾得特色-三防功能" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/1-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/1-1.jpg" caption="参数" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/1-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/1-2.jpg" caption="介绍" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/1-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/1-3.jpg" caption="↑宾得特色-三防功能" >}}
 
 和同级单反相比，K70亮点大概有：高感、约100% 0.95倍大视野取景五菱镜取景器、无低通滤光镜、三防功能、1/6000秒快门、三轴防抖系统、-3EV自动对焦
 
 # 开箱
-{{< img src="/images/2017/2017-01-17-pentax-k70/2-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-1.jpg" title="↑以下开箱图片均出自理光GR ii" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/2-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-1.jpg" caption="↑以下开箱图片均出自理光GR ii" >}}
 
-{{< img src="/images/2017/2017-01-17-pentax-k70/2-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-2.jpg" title="↑理光家一致设计的灰底盒子，跟DA 15的盒子做个对比" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/2-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-3.jpg" title="↑开箱的感谢辞" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/2-4.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-4.jpg" title="↑完整的说明书" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/2-5.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-5.jpg" title="↑除了机身，配件还有电源线、座充、电池和肩带" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/2-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-2.jpg" caption="↑理光家一致设计的灰底盒子，跟DA 15的盒子做个对比" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/2-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-3.jpg" caption="↑开箱的感谢辞" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/2-4.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-4.jpg" caption="↑完整的说明书" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/2-5.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/2-5.jpg" caption="↑除了机身，配件还有电源线、座充、电池和肩带" >}}
 
 配套的修图软件Digital Camera Utility 5 (DCU5) 只能随机附送的CD安装，官网只提供下载升级包，要找光驱安装这点略坑爹。更坑爹的是目前Adobe暂不支持像素偏移的RAW，只能使用这个巨难用的DCU5来解。
 
-{{< img src="/images/2017/2017-01-17-pentax-k70/3-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/3-1.jpg" title="↑快门灯环在拍照模式是绿色的" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/3-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/3-2.jpg" title="↑视频模式时是红色的" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/3-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/3-1.jpg" caption="↑快门灯环在拍照模式是绿色的" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/3-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/3-2.jpg" caption="↑视频模式时是红色的" >}}
 
 沿袭自K-s2的快门灯环。跟理光自家的GR ii一脉相承。
 
-{{< img src="/images/2017/2017-01-17-pentax-k70/4-4.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-4.jpg" title="↑左侧麦克风接口，Fx1键可自定义功能" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/4-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-2.jpg" title="↑握柄非常饱满" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/4-4.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-4.jpg" caption="↑左侧麦克风接口，Fx1键可自定义功能" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/4-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-2.jpg" caption="↑握柄非常饱满" >}}
 
 TCSTV里面Chris吐槽说手小的话会握不住，我手大感觉还好。但相比起来原来K-5握感确实会更偏紧致。
 
-{{< img src="/images/2017/2017-01-17-pentax-k70/4-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-3.jpg" title="↑翻转屏要是加入触控功能就更好了" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/4-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-1.jpg" title="↑正面" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/4-5.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-5.jpg" title="↑这个档位的机型只支持一个SD卡" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/4-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-3.jpg" caption="↑翻转屏要是加入触控功能就更好了" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/4-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-1.jpg" caption="↑正面" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/4-5.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-5.jpg" caption="↑这个档位的机型只支持一个SD卡" >}}
 
-{{< img src="/images/2017/2017-01-17-pentax-k70/4-6.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-6.jpg" title="↑机身材质塑料,但黑版看起来还蛮有金属感的" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/4-7.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-7.jpg" title="↑带前后双波轮和宾得绿键,Fx2键可自定义,三个用户模式" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/4-8.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-8.jpg" title="↑按键面积大而突出" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/4-9.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-9.jpg" title="↑底部防滑条,产地菲律宾" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/4-6.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-6.jpg" caption="↑机身材质塑料,但黑版看起来还蛮有金属感的" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/4-7.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-7.jpg" caption="↑带前后双波轮和宾得绿键,Fx2键可自定义,三个用户模式" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/4-8.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-8.jpg" caption="↑按键面积大而突出" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/4-9.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/4-9.jpg" caption="↑底部防滑条,产地菲律宾" >}}
 
 {{< img src="/images/2017/2017-01-17-pentax-k70/5-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/5-1.jpg" >}}
 {{< img src="/images/2017/2017-01-17-pentax-k70/5-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/5-2.jpg" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/5-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/5-3.jpg" title="↑搭配 Da 70 limited 饼干头" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/5-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/5-3.jpg" caption="↑搭配 Da 70 limited 饼干头" >}}
 
 {{< img src="/images/2017/2017-01-17-pentax-k70/6-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/6-2.jpg" >}}
 {{< img src="/images/2017/2017-01-17-pentax-k70/6-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/6-3.jpg" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/6-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/6-1.jpg" title="↑搭配 Da 15 limited 饼干头" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/6-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/6-1.jpg" caption="↑搭配 Da 15 limited 饼干头" >}}
 
-{{< img src="/images/2017/2017-01-17-pentax-k70/7-3.png" thumbnail="/images/2017/2017-01-17-pentax-k70/7-3.png" title="↑WiFi传输与遥控,app不稳定经常断" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/7-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/7-2.jpg" title="↑Live View模式增加了混合式对焦系统" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/7-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/7-1.jpg" title="↑最新的KAF4卡口，支持电磁光圈镜头。但目前好像仅有新发布的55-300一枚镜头是电磁光圈的。宾得高速镜头群的确实依然是其最大软肋" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/7-3.png" thumbnail="/images/2017/2017-01-17-pentax-k70/7-3.png" caption="↑WiFi传输与遥控,app不稳定经常断" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/7-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/7-2.jpg" caption="↑Live View模式增加了混合式对焦系统" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/7-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/7-1.jpg" caption="↑最新的KAF4卡口，支持电磁光圈镜头。但目前好像仅有新发布的55-300一枚镜头是电磁光圈的。宾得高速镜头群的确实依然是其最大软肋" >}}
 
 # 像素位移测试
 
 * 场景一：室外
 
-{{< img src="/images/2017/2017-01-17-pentax-k70/8-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/8-1.jpg" title="↑全景图" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/8-2.png" thumbnail="/images/2017/2017-01-17-pentax-k70/8-2.png" title="↑像素位移关闭" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/8-3.png" thumbnail="/images/2017/2017-01-17-pentax-k70/8-3.png" title="↑像素位移开启" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/8-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/8-1.jpg" caption="↑全景图" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/8-2.png" thumbnail="/images/2017/2017-01-17-pentax-k70/8-2.png" caption="↑像素位移关闭" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/8-3.png" thumbnail="/images/2017/2017-01-17-pentax-k70/8-3.png" caption="↑像素位移开启" >}}
 
 可以看到树干和背后房屋的细节在开了像素位移后明显更多。
 
 * 场景二：室内
 
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-1-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-1-1.jpg" title="↑全景图" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-1-2.png" thumbnail="/images/2017/2017-01-17-pentax-k70/9-1-2.png" title="↑像素位移关闭" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-1-3.png" thumbnail="/images/2017/2017-01-17-pentax-k70/9-1-3.png" title="↑像素位移开启" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-1-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-1-1.jpg" caption="↑全景图" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-1-2.png" thumbnail="/images/2017/2017-01-17-pentax-k70/9-1-2.png" caption="↑像素位移关闭" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-1-3.png" thumbnail="/images/2017/2017-01-17-pentax-k70/9-1-3.png" caption="↑像素位移开启" >}}
 
 对于这种近景貌似开像素位移提升也不算很大。
 
 * 场景三：开启像素位移后ISO测试
 
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-1t.jpg" title="↑ISO100" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-2t.jpg" title="↑ISO200" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-3t.jpg" title="↑ISO400" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-4.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-4t.jpg" title="↑ISO800" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-5.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-5t.jpg" title="↑ISO1600" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-6.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-6t.jpg" title="↑ISO3200" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-7.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-7t.jpg" title="↑ISO6400" >}}
-{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-8.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-8t.jpg" title="↑ISO12800" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-1.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-1t.jpg" caption="↑ISO100" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-2.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-2t.jpg" caption="↑ISO200" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-3.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-3t.jpg" caption="↑ISO400" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-4.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-4t.jpg" caption="↑ISO800" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-5.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-5t.jpg" caption="↑ISO1600" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-6.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-6t.jpg" caption="↑ISO3200" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-7.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-7t.jpg" caption="↑ISO6400" >}}
+{{< img src="/images/2017/2017-01-17-pentax-k70/9-3-8.jpg" thumbnail="/images/2017/2017-01-17-pentax-k70/9-3-8t.jpg" caption="↑ISO12800" >}}
 
 # 总结
 
