--- a/content/posts/2021/08/2021-08-05-schneider-50-1_9.zh.md
+++ b/content/posts/2021/08/2021-08-05-schneider-50-1_9.zh.md
@@ -63,8 +63,10 @@ featured_image: 2021/08/05/front-1.jpg
 手里的标头现在有3枚：
 
 * Leica Summicron-R 50mm f/2.0 （E55，R口改F口）
-* Schneider kreuznach xenon 50mm f1.9 （dkl口转接F口）
+* Schneider kreuznach xenon 50mm f1.9 （DKL口转接F口）
 * Voigtlander Nokton 50mm f/1.2 Aspherical （M口）
+
+{{< img src="/images/2021/08/05/structuresize-compare-1.jpg" title="三枚标头" caption="↑左：施耐德Xenon 50F/1.9DKL；中：徕卡Summicron-R50F/2;右：福伦达Nocton VM50F/1.2" >}}
 
 光学上来看，施耐德DKL50和徕卡R50一样，整体上都是双高斯结构的四组六片结构（当然具体玻璃和每组镜片的参数各有差异）。福伦达的VM50是6组8片（带两片非球面加一片特殊超低色散），用料豪华了很多。
 
