--- a/content/posts/2021/11/2021-11-13-m9-nikkor.zh.md
+++ b/content/posts/2021/11/2021-11-13-m9-nikkor.zh.md
@@ -43,8 +43,7 @@ ZM50 1.5是Sonnar结构，想怀旧，我自然盯上了它的原型：Zeiss Opt
 
 {{< img src="/images/2021/11/13/cri_000000182117.jpg" title="Photo by Bedrich Grunzweig" caption="↑Robert Frank, Photographer, New York City, Covering Opening Night, in 1953-54 Season, at the Old Metropolitan Opera, 39th Street and Broadway c. 1953" >}}
 
-据说这枚镜头在当年非常有名，最早是朝鲜战争时期因为生活杂志战地记者David Douglas Duncan选择[使用它](https://www.life.com/history/korean-war-photos-david-douglas-duncan/)而在记者圈打响了[Nikkor LTM的名气](http://leicaphilia.com/leica-celebrates-the-man-responsible-for-the-rise-of-nikon/)，也间接说明其可靠的做工和成像的素质。[上图](https://www.moma.org/collection/works/49767)则是Robert Frank拿着这枚镜头在街上拍照的样子（脖上挂着的那只好像是Nikkor 8.5cm），他的代表作[The Americans](https://www.lensculture.com/articles/robert-frank-the-americans)里很多照片就是拿这枚
-Nikkor镜头拍的。我在上一篇[标头小乱斗]({{< ref "/posts/2021/10/2021-10-22-normal-lens-compare.zh.md" >}})里也有稍稍提到Nikkor 5cm 1.4 LTM在胶片上的体验，非常不错。
+据说这枚镜头在当年非常有名，最早是朝鲜战争时期因为生活杂志战地记者David Douglas Duncan选择[使用它](https://www.life.com/history/korean-war-photos-david-douglas-duncan/)而在记者圈打响了[Nikkor LTM的名气](http://leicaphilia.com/leica-celebrates-the-man-responsible-for-the-rise-of-nikon/)，也间接说明其可靠的做工和成像的素质。[上图](https://www.moma.org/collection/works/49767)则是Robert Frank拿着这枚镜头在街上拍照的样子（脖上挂着的那只好像是Nikkor 8.5cm），他的代表作[The Americans](https://www.lensculture.com/articles/robert-frank-the-americans)里很多照片就是拿这枚Nikkor镜头拍的。我在上一篇[标头小乱斗]({{< ref "/posts/2021/10/2021-10-22-normal-lens-compare.zh.md" >}})里也有稍稍提到Nikkor 5cm 1.4 LTM在胶片上的体验，非常不错。
 
 {{< img src="/images/2021/10/22/rf_nikkor.jpg" title="机身Hexar RF" caption="↑镜头nikkor 50 1.4 ltm" >}}
 
