--- a/content/posts/2021/08/2021-08-05-schneider-50-1_9.zh.md
+++ b/content/posts/2021/08/2021-08-05-schneider-50-1_9.zh.md
@@ -137,3 +137,20 @@ featured_image: 2021/08/05/front-1.jpg
 {{< img src="/images/2021/08/05/size-LR-e43.jpg" title="Summicron-R50" caption="↑E43" >}}
 {{< img src="/images/2021/08/05/size-LR-right.jpg" title="Summicron-R50" caption="↑E55" >}}
 {{< img src="/images/2021/08/05/28-135.jpg" title="DKL镜头" caption="↑左：施耐德28F4；右：福伦达135F4" >}}
+
+---
+
+# 2022/10/10 update:
+
+最近又把施耐德的Xenon 50mm F/1.9和Curtagon 28mm F/4翻出来接在FE2上拍了几张黑白（Kentmere Pan 400），出来的效果意外的很不错。彩负上比较硬的二线性特征在黑白胶片上反而变柔和了，加上焦内较锐和适中的反差，出片很舒服。
+
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-2-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Xenon 50mm F1.9" >}}
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-3-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Xenon 50mm F1.9" >}}
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-5-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Xenon 50mm F1.9" >}}
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-7-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Xenon 50mm F1.9" >}}
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-15-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Curtagon 28mm F4" >}}
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-20-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Xenon 50mm F1.9" >}}
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-21-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Xenon 50mm F1.9" >}}
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-30-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Curtagon 28mm F4" >}}
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-34-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Xenon 50mm F1.9" >}}
+{{< img src="/gallery/film/2022/10/10/kentmere_pan400-37-positive.jpg" title="Kentmere Pan 400" caption="↑Schneider Kreuznach Xenon 50mm F1.9" >}}
