--- a/content/posts/2023/03/2023-03-23-leica-x-typ-113.zh.md
+++ b/content/posts/2023/03/2023-03-23-leica-x-typ-113.zh.md
@@ -1,5 +1,5 @@
 ---
-title: "徕卡X Typ113：富士X100V的平替"
+title: "徕卡X Typ113：富士X100V的平替（吗）"
 date: 2023-03-23T17:52:25-04:00
 series:
 - camera
@@ -21,13 +21,13 @@ featured_image: 2023/03/23/box5.jpg
 
 随身相机，我比较看重三个基本属性：
 
-- 第一，足够轻便小巧，随时带出门不会觉得累赘
-- 第二，需要颜值够高，这样才有带出门掏出来拍照的欲望
-- 第三，画质不能太差，否则我用手机来拍就好，所以传感器尺寸得是APSC或全画幅。
+1. 足够轻便小巧，随时带出门不会觉得累赘
+2. 需要颜值够高，这样才有带出门掏出来拍照的欲望
+3. 画质不能太差，否则我用手机来拍就好，所以传感器尺寸得是APSC或全画幅
 
 本着这三个原则，目前最热门的几个选项，APSC传感器里有理光GR系列和富士X100系列，全画幅随身机里的候选机型则是徕卡Q系列，索尼Rx1r II和蔡司ZX1。
 
-本着这个原则，我曾有幸拥有过一台全新的银色限量版的理光GR2：
+这其中，我曾有幸拥有过一台全新的银色限量版的理光GR2：
 
 {{< img src="/images/2023/03/23/GR_box.jpg" thumbnail="/images/2023/03/23/GR_box.jpg" title="GR2银色限量版盒子" caption="👆" >}}
 {{< img src="/images/2023/03/23/GR_silver.jpg" thumbnail="/images/2023/03/23/GR_silver.jpg" title="GR2银色限量，附送一个收纳皮套" caption="👆" >}}
@@ -65,17 +65,17 @@ featured_image: 2023/03/23/box5.jpg
 
 这台徕卡X typ113非常轻，加上电池不到500克，拿在手里或者挂在脖子上毫无压力。机身尺寸比徕卡M9更小，比较接近M3的手感。
 
-{{< img src="/images/2023/03/23/LeicaX_LeicaM9_2.jpg" thumbnail="/images/2023/03/23/LeicaX_LeicaM9_2.jpg" title="Leica X机身比M9更矮一点，颜色也更白一些，" caption="👆" >}}
-{{< img src="/images/2023/03/23/LeicaX_LeicaM9_1.jpg" thumbnail="/images/2023/03/23/LeicaX_LeicaM9_1.jpg" title="厚度比M9薄不少。M9挂的是最近新入的Summilux 50mm E46 pre-asph，很小巧 " caption="👆" >}}
+{{< img src="/images/2023/03/23/LeicaX_LeicaM9_2.jpg" thumbnail="/images/2023/03/23/LeicaX_LeicaM9_2.jpg" title="Leica X机身比M9更矮一点，颜色也更白一些" caption="👆" >}}
+{{< img src="/images/2023/03/23/LeicaX_LeicaM9_1.jpg" thumbnail="/images/2023/03/23/LeicaX_LeicaM9_1.jpg" title="厚度比M9薄不少。M9挂的是最近新入的Summilux 50mm E46 pre-asph，很小巧，比起ASPH，最近更喜欢这种老镜头的味道 " caption="👆" >}}
 
 {{< img src="/images/2023/03/23/LeicaX_LeicaM3_1.jpg" thumbnail="/images/2023/03/23/LeicaX_LeicaM3_1.jpg" title="和M3的尺寸很接近，镜头同样是43mm滤镜，但徕卡X typ113的自动镜头尺寸大了一整圈" caption="👆" >}}
-{{< img src="/images/2023/03/23/LeicaX_LeicaM3_2.jpg" thumbnail="/images/2023/03/23/LeicaX_LeicaM3_2.jpg" title="可惜没有内置取景器" caption="👆" >}}
+{{< img src="/images/2023/03/23/LeicaX_LeicaM3_2.jpg" thumbnail="/images/2023/03/23/LeicaX_LeicaM3_2.jpg" title="厚度相似，可惜没有内置取景器" caption="👆" >}}
 
 # 使用体验
 
 徕卡X Typ113属于徕卡的X系列，X系相机其实都是徕卡设计制造的，并不像D-Lux系列那样属于松下贴牌机。我手上这台Typ113发布于2014年，算是小众的X系列最后发布的几款产品之一，也算是近些年大火的Q系列的前身之作。当时普通版售价为$2295，限量版售价貌似接近$3000，估计销量是不太好的。做工一流，机身设计我觉得比前面两代（X1和X2）都更成熟耐看（小一码的徕卡Q）。自从全画幅固定镜头的徕卡Q和半画幅可更换镜头的TL/CL系列发布后，X系列这个代表半画幅固定镜头设计的产品线就被徕卡砍掉了。由于知道这个系列的人不算多，现在二手市场价格还算良心。
 
-机身的操控非常简单，快门转盘，光圈转盘以及镜头上的对焦转环都是实体可直接操作的。对焦环阻尼适中手感不错，手动对焦时中心还会自动放大辅助对焦（不过我大部分时候都是中心点自动对焦，会更方便些）。镜头本身的素质还是不错的，最近对焦距离做到了0.2米，可惜为了保持近距离画质不至于出现像X100系列前几代那样很“肉”的画面，这台typ113相机会强行在最近对焦距离自动收缩光圈至f/2.8，并不能拍出很明显的近距离虚化效果。
+机身的操控非常简单，快门转盘，光圈转盘以及镜头上的对焦转环都是实体可直接操作的。对焦环阻尼适中手感不错，手动对焦时中心还会自动放大辅助对焦（不过我大部分时候都是中心点自动对焦，会更方便些）。镜头本身的素质还是不错的，最近对焦距离做到了0.2米，可惜为了保持近距离画质不至于出现像X100系列前几代那样很“肉”的画面，这台typ113相机会强行在最近对焦距离自动收缩光圈至f/2.8，并不能拍出很明显的近距离虚化效果。操作上我觉得主要有两个槽点：一是下方向键空出来不能自定义，二是快门旁边的录像键非常容易误触（视频规格只有1080p，应该没人会用这台相机拍视频吧）。
 
 就拍摄体验来说，这台相机非常简单直接（或者说，不会像富士X100V那样有很多“可玩性”）。所以在没有选配巨贵的徕卡Visoflex (Typ 020)电子取景器的情况下，比起X100V，我觉得typ113的拍照体验其实更像一台拥有更大光圈，外型更亮骚，焦段处在35mm的GR（就连拍照时自动对焦的速度也差不多，低反差区域经常对不上）。少了取景器不太方便精准构图，或者说快门按起来心态上会更随意，适合“浪射流”那种看到就拍的拍摄风格。在这点上配有光电混合取景器的富士X100系列会显得更严肃些。
 
@@ -83,7 +83,7 @@ featured_image: 2023/03/23/box5.jpg
 
 # 样片
 
-以下样片都是这周随身带着相机扫街拍的，拍的比较随意，基本都是1/125秒快门优先，中心点对焦，腰平盲拍的。这台相机直出JPG只有高对比黑白滤镜模式比较好看，别的色彩都很“数码”，无“德味”，不像富士X100或者理光GR的滤镜那么出彩。但DNG格式的RAW细节很丰富，蛮容易就可以调出比较满意的照片。画质吊打手机还是不成问题的。
+以下样片都是这周随身带着相机扫街拍的，拍的比较随意，基本都是1/125秒快门优先，中心点对焦，腰平盲拍的。这台相机直出JPG只有高对比黑白滤镜模式比较好看，别的色彩都很“数码”，无“德味”，不像富士X100或者理光GR的滤镜那么出彩。但DNG格式的RAW细节很丰富，蛮容易就可以调出比较满意的照片。画质吊打手机还是不成问题的。以下样片均为DNG格式后期微调色。
 
 ## 彩色
 
