--- a/content/posts/2023/03/2023-03-23-leica-x-typ-113.zh.md
+++ b/content/posts/2023/03/2023-03-23-leica-x-typ-113.zh.md
@@ -58,7 +58,7 @@ featured_image: 2023/03/23/box5.jpg
 {{< img src="/images/2023/03/23/camera_lens.jpg" thumbnail="/images/2023/03/23/camera_lens.jpg" title="镜头Summilux 23mm f/1.7 ASPH，等效全幅35mm，应该是随身机里光圈最大的镜头了。无伸缩设计，不会像GR系列那么容易进灰" caption="👆" >}}
 {{< img src="/images/2023/03/23/camera_front_light.jpg" thumbnail="/images/2023/03/23/camera_front_light.jpg" title="弹出式设计的闪光灯，上面是Moncler字样。" caption="👆" >}}
 {{< img src="/images/2023/03/23/camera_top.jpg" thumbnail="/images/2023/03/23/camera_top.jpg" title="机顶从左到右分别是快门速度拨盘（最快1/2000秒的镜间快门），快门按钮和开机键（集成单张和连拍模式），录像键，以及光圈调节旋钮" caption="👆" >}}
-{{< img src="/images/2023/03/23/camera_back.jpg" thumbnail="/images/2023/03/23/camera_back.jpg" title="左上角标示限量版编号，机背按键布局和M240有点像，方向键下放无特殊功能，不可自定义差评🙅" caption="👆" >}}
+{{< img src="/images/2023/03/23/camera_back.jpg" thumbnail="/images/2023/03/23/camera_back.jpg" title="左上角标示限量版编号，机背按键布局和M240有点像，方向键下方键无特殊功能，不可自定义差评🙅" caption="👆" >}}
 {{< img src="/images/2023/03/23/camera_bottom.jpg" thumbnail="/images/2023/03/23/camera_bottom.jpg" title="机身底部螺孔没跟光轴对齐，比较可惜" caption="👆" >}}
 
 # 机身尺寸
