--- a/content/posts/2023/10/2023-10-23-wrayflex.zh.md
+++ b/content/posts/2023/10/2023-10-23-wrayflex.zh.md
@@ -1,5 +1,5 @@
 ---
-title: "全宇宙唯一一台黑漆M42口英产单反胶片机Wrayflex Ia"
+title: "唯一英产单反胶片机：Wrayflex Ia改黑漆M42口"
 date: 2023-10-23T12:33:10-04:00
 series:
 - camera
@@ -11,15 +11,41 @@ tags:
 - m42
 - black_paint
 - chinese
-slug: "rolleiflex tlr"
-featured_image: 2023/09/14/rolleiflex28-35.JPG
-draft: true
+slug: "wrayflex"
+featured_image: 2023/10/23/wrayflex-7.jpg
 ---
 
-德国和日本生产的胶片相机大家见得多了，美国产的多半也略有耳闻。最近机缘巧合，收了一台英国产的Wrayflex。这台单反有很多独特之处：
+全宇宙唯一一台黑漆M42口英产单反。
+<!--more-->
+
+# 英产单反
+
+说起胶片相机，最知名的品牌和机型基本都源自德国和日本。最知名的几个代表：徕卡的旁轴，禄来的双反，尼康的135单反，哈苏的120单反（这个倒是来自瑞典而非德国）。多玩玩的话，一定听说过德国的柯达AG生产的雷丁那系列相机（有很多高性价比相机和镜头）。除此之外，佳能，宾得，美能达，奥林巴斯，富士，柯尼卡，玛米亚，勃朗尼卡，东京光学等一系列日系品牌，也都在上世纪下半叶发布了琳琅满目的优秀机型和镜头。
+
+如果你恰好喜欢研究老镜头，那多半对德系一众光学设计厂不陌生：光学巨擘蔡司，历史悠久的福伦达（创始于奥地利，后迁往德国），主要生产中大画幅镜头的施耐德和罗敦司德，以及稍微小众点的恩娜，斯坦海尔，等等。这段时间东德和苏联也生产了不少好镜头，值得一淘。
+
+如果你还是中大画幅玩家，那么一定认识来自德国慕尼黑的顶级品牌林哈夫（617宽幅机、双轨机）以及别的经典中大画幅相机品牌仙娜、骑士、沙慕尼，等等。
+
+如果你玩到最后终于病入膏肓，那么电影镜头ACDK一定如数家珍，其中C和D分别指代库克（Cooke）和刀梅（Dallmeyer），均来自英国。
+
+那么既然都玩到小众到顶点的英伦风电影镜头了，你可否知道，其实不列颠岛上，也曾生产过单反相机？
+
+今天的主角，便是这台由Wray London生产的英国唯一一款35mm胶片单反Wrayflex。
+
+{{< img src="/images/2023/10/23/wrayflex_I.jpg" title="Wrayflex I原漆配50/2 Unilite镜头" caption="👆" >}}
 
 
-1. 由Wray London生产的英国唯一一款35mm单反，用料很扎实，产量很稀少。
+# 历史
+
+
+
+# 外观
+
+# 操作
+
+# 样片
+
+1. ，用料很扎实，产量很稀少。
 
 
 2. wrayflex分三代，第一代成像面积是奇葩的24*32mm，第二代改成正常的24*36mm，前两代取景窗都是镜片反光，第三代改为五棱镜，体积变大很多。我手上的这是第二代。
