--- a/content/posts/2023/10/2023-10-23-wrayflex.zh.md
+++ b/content/posts/2023/10/2023-10-23-wrayflex.zh.md
@@ -15,46 +15,117 @@ slug: "wrayflex"
 featured_image: 2023/10/23/wrayflex-7.jpg
 ---
 
-全宇宙唯一一台黑漆M42口英产单反。
+全宇宙唯一一台黑漆M42口英产胶片单反。
 <!--more-->
 
-# 英产单反
+{{< img src="/images/2023/10/23/wrayflex-7.jpg" title="Wrayflex Ia" caption="👆" >}}
 
-说起胶片相机，最知名的品牌和机型基本都源自德国和日本。最知名的几个代表：徕卡的旁轴，禄来的双反，尼康的135单反，哈苏的120单反（这个倒是来自瑞典而非德国）。多玩玩的话，一定听说过德国的柯达AG生产的雷丁那系列相机（有很多高性价比相机和镜头）。除此之外，佳能，宾得，美能达，奥林巴斯，富士，柯尼卡，玛米亚，勃朗尼卡，东京光学等一系列日系品牌，也都在上世纪下半叶发布了琳琅满目的优秀机型和镜头。
 
-如果你恰好喜欢研究老镜头，那多半对德系一众光学设计厂不陌生：光学巨擘蔡司，历史悠久的福伦达（创始于奥地利，后迁往德国），主要生产中大画幅镜头的施耐德和罗敦司德，以及稍微小众点的恩娜，斯坦海尔，等等。这段时间东德和苏联也生产了不少好镜头，值得一淘。
+# 英伦风单反
 
-如果你还是中大画幅玩家，那么一定认识来自德国慕尼黑的顶级品牌林哈夫（617宽幅机、双轨机）以及别的经典中大画幅相机品牌仙娜、骑士、沙慕尼，等等。
+说起胶片相机，最知名的品牌和机型基本都源自德国和日本。最知名的几个代表：徕卡的旁轴，禄来的双反，尼康的135单反，哈苏的120单反（这个倒是来自瑞典而非德国）。多玩玩的话，一定听说过德国的柯达AG生产的雷丁那系列相机（现在依然有很多高性价比相机和镜头可淘）。除此之外，佳能，宾得，美能达，奥林巴斯，富士，柯尼卡，玛米亚，勃朗尼卡，东京光学等一系列日系品牌，也都在上世纪下半叶发布了琳琅满目的优秀机型和镜头。
+
+如果你喜欢研究老镜头，那一定对德系一众光学设计厂不陌生：光学巨擘蔡司，历史悠久的福伦达（创始于奥地利，后迁往德国），主要生产中大画幅镜头的施耐德和罗敦司德，以及稍微小众点的恩娜，斯坦海尔，等等。这段时间东德和苏联也生产了不少好镜头，也值得一试。
+
+如果你恰好还是中大画幅玩家，那么一定认识来自德国慕尼黑的顶级品牌林哈夫（617宽幅机、双轨机）以及别的经典中大画幅相机品牌仙娜、骑士、沙慕尼，阿尔帕等等。
 
 如果你玩到最后终于病入膏肓，那么电影镜头ACDK一定如数家珍，其中C和D分别指代库克（Cooke）和刀梅（Dallmeyer），均来自英国。
 
-那么既然都玩到小众到顶点的英伦风电影镜头了，你可否知道，其实不列颠岛上，也曾生产过单反相机？
+既然都玩到小众英伦风的电影镜头了，你可否知道，其实不列颠岛上，也曾生产过单反相机？
 
 今天的主角，便是这台由Wray London生产的英国唯一一款35mm胶片单反Wrayflex。
 
 {{< img src="/images/2023/10/23/wrayflex_I.jpg" title="Wrayflex I原漆配50/2 Unilite镜头" caption="👆" >}}
 
 
-# 历史
+# 历史背景
+
+Wrayflex由WRAY Optical Works（1850-1971）公司生产，创始人为William Wray，公司最开始生产天文望远镜。二战结束后Wray已经是一家很有名望的镜头设计生产厂家了，但在早期从未生产过相机，之所以1951年突然决定推出Wrayflex系列单反，应该是因为二战结束后，英国贸易委员会在政策上限制了海外（主要是二战敌对国德日）生产的相机入口英国市场，为了抢占这个绝佳的商业机会才开始入局的。据[网上资料](https://www.shutterbug.com/content/wrayflex-english-slr-germany)显示，Wrayflex的专利人Maurice Studdert是一名英国皇家海军，他在作战期间从德国带回大量技术文档，同时也带回了两名德国技术人员Harry Goebbels和Werner Goebbels（两人是亲兄弟）帮助设计制造了Wrayflex。所以也许可以说，这台英产单反的源头依然是德国（俯视图的梯形形状其实很像爱克山泰Exakta）。
+
+Wrayflex相机分为三代:
+
+1. 第一代Wrayflex I于1951年发布，成像面积24x32mm，每卷胶片可拍45张，反光镜取景，正面早期有两个闪光灯接口，后改为三个。大约生产了850台。
+2. 第二代Wrayflex Ia是小改款型，于1954年发布，成像面积更新为传统的24x36mm，有两个闪光灯接口。后期（1958年）在机顶加上了冷靴。大约1600台。
+3. 第三代Wrayflex II是大改款型，于1959年发布，反光镜取景改为了五棱镜取景，但反光板收缩机制依然是向上收缩，导致五棱镜位置很高，体积变大很多。可能是太丑了，只生产了大约300台。
+
+{{< img src="/images/2023/10/23/wray-crosssection1.jpg" title="Wrayflex结构图" caption="👆实机剖面图" >}}
+
+Wrayflex最具有特色的设计，应该是前两代使用了两枚反光镜而非五棱镜来取景，并与之匹配设计了独特的反光镜收起机制：按下快门后反光镜收起方向是向上折叠，收缩到普通单反放置五棱镜的空间里。没有了反光镜收起时的限制，Wrayflex的原生卡口法兰距只有42.05mm（M42口法兰距是45.5mm）。
+
+{{< img src="/images/2023/10/23/wray-crosssection2.jpg" title="Wrayflex结构图" caption="👆紫色是取景光路，橙色是反光板放下时的位置，红色时反光板收起时的位置" >}}
+
+但这一独特的设计也带来了一大弊端：反光镜成象是左右颠倒的，类似双反腰平取景的体验。同时，反光镜取景也导致画面四周暗角明显，没有五棱镜取景明亮。但这也可以理解，毕竟在1950年代早期，大规模生产消费级高质量五棱镜依然是相当困难的事情[^1]。
+
+{{< img src="/images/2023/10/23/wrayflex-ii.jpg" title="Wrayflex ii" caption="👆加了五棱镜，也变高了不少" >}}
+
+伴随Wrayflex，Wray设计了完善的镜头群。由于原生法兰距较短，设计小广角35mm镜头时也无需使用其他单反上常见的反望远结构（retrofocus designs），为镜头设计带来了很大便利，也使得该系列镜头不像别的单反镜头那么大，反而都很小巧精致。至今也有不少老玩家喜欢把Wrayflex镜头转接在徕卡旁轴上使用：
+
+镜头群[^2]：
+- f2 50 mm Unilite, 1951.
+- f3.5 50 mm Lustrar, 1951.
+- f3.5 35 mm Lustrar, c. 1951.
+- f4 90 mm Lustrar 1951.
+- f2.8 50 mm Unilux, 1954.
+- f4 135 mm Lustrar, c. 1957.
+- f18 42" Prismascope, 20 x 60 monocular, 1960.
+- 24" Prismascope Mk II, 12 x 40 monocular, 1962.
+
+{{< img src="/images/2023/10/23/wray-lenses.jpg" title="Wray镜头结构图" caption="👆" >}}
 
 
+[^1]: 参见[WRAYFLEX - the only British SLR camera](https://www.klassik-cameras.de/Wrayflex.html)
+[^2]: 参见[Wrayflex I](http://www.earlyphotography.co.uk/site/entry_C430.html)
 
 # 外观
 
+{{< img src="/images/2023/10/23/wray-works2.jpg" title="Wrayflex生产线" caption="👆" >}}
+
+如上图所示，Wrayflex都是手工打造的，用料相当扎实。普通Wrayflex是银色的。我这台被上一任机主改成了黑漆，卡口也被改为m42。基本可以肯定，这台是全宇宙唯一一台的黑漆m42卡口的wrayflex。我淘了一枚便宜的太苦玛smc 50 1.4接在上面试了下。
+
+{{< img src="/images/2023/10/23/wrayflex_front.JPG" title="Wrayflex Ia黑漆M42版" caption="👆正面" >}}
+{{< img src="/images/2023/10/23/wrayflex_left.JPG" title="Wrayflex Ia黑漆M42版" caption="👆左面" >}}
+{{< img src="/images/2023/10/23/wrayflex_top.JPG" title="Wrayflex Ia黑漆M42版" caption="👆俯视" >}}
+{{< img src="/images/2023/10/23/wrayflex-8.jpg" title="Wrayflex Ia黑漆M42版" caption="👆背面很干净" >}}
+{{< img src="/images/2023/10/23/wrayflex-10.jpg" title="Wrayflex Ia黑漆M42版" caption="👆布帘和后盖" >}}
+{{< img src="/images/2023/10/23/wrayflex-11.jpg" title="Wrayflex Ia黑漆M42版" caption="👆可以向上收的反光板" >}}
+{{< img src="/images/2023/10/23/wrayflex_bottom.JPG" title="Wrayflex Ia黑漆M42版" caption="👆Wrayflex没有过片扳手，而是把过片旋钮放在了机底正中间，拧动起来手感很扎实，每次转动像打开徕卡M的底盖" >}}
+{{< img src="/images/2023/10/23/wrayflex_leica.JPG" title="Wrayflex和徕卡M3对比" caption="👆作为单反的Wrayflex真的很小巧，也就比徕卡M3高一点" >}}
+
+感觉太苦玛有点大，还是更喜欢转接DKL镜头。银色镜头配合机顶的银色转盘也很和谐。
+
+{{< img src="/images/2023/10/23/wrayflex-12.jpg" title="Wrayflex Ia黑漆M42版" caption="👆配施耐德Xenon 50 2 dkl" >}}
+{{< img src="/images/2023/10/23/wrayflex-14.jpg" title="Wrayflex Ia黑漆M42版" caption="👆配福伦达贵妇 135 4 dkl" >}}
+{{< img src="/images/2023/10/23/wrayflex-15.jpg" title="Wrayflex Ia黑漆M42版" caption="👆配施耐德Curtagon 35 2.8 dkl" >}}
+{{< img src="/images/2023/10/23/wrayflex-16.jpg" title="Wrayflex Ia黑漆M42版" caption="👆从取景器看出去，取景器中心是放大镜而不是裂像屏" >}}
+
 # 操作
+
+{{< img src="/images/2023/10/23/film_advance.gif" title="过片旋钮在底部" caption="👆转动时，顶部快门速度旋钮和计数器都会跟着旋转" >}}
+{{< img src="/images/2023/10/23/shutter_speed.gif" title="快门速度拨盘" caption="👆提起后旋转" >}}
+
 
 # 样片
 
-1. ，用料很扎实，产量很稀少。
+只拍了一卷Ilford HP5，使用的镜头是福伦达赛破铜。自己第一次在家分装100英尺盘片的时候操作失误，产生了大量划痕。看个意思就好，本来成像也跟机身关系不大。大半个世纪过去了，这相机的快门速度倒还算准确。我用手机开slow-mo视频测了下，闪光同步速度大概是1/20秒。目前遇到的唯一问题是两片布帘快门在较高快门速度时的缝隙有一定概率会在横走到一半的时“关闭”，导致画面有一半未曝光（我猜是两篇布帘速度不一致导致的）。不知道这种小众机器该去哪里找师傅做保养。估计只能DIY了。
 
+{{< img src="/images/2023/10/23/sample-1.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/10/23/sample-2.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/10/23/sample-3.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/10/23/sample-4.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/10/23/sample-5.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/10/23/sample-6.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/10/23/sample-7.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/10/23/sample-8.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/10/23/sample-9.jpg" title="样片" caption="👆" >}}
 
-2. wrayflex分三代，第一代成像面积是奇葩的24*32mm，第二代改成正常的24*36mm，前两代取景窗都是镜片反光，第三代改为五棱镜，体积变大很多。我手上的这是第二代。
+# 后记
 
+随着1950年代后期英国贸易禁令的解除，WRAY这种每年根据订单生产几百台相机的手工小作坊完全无力抵抗来自德国和日本相机巨头的冲击。尤其是宾得Asahi PENTAX生产的五棱镜单反基本在各个方面都碾压了Wrayflex。WRAY决定放弃单反生产，重新聚焦在英国境内的镜头制造上，唯一英产单反Wrayflex就此落下帷幕。
 
-3. 由于是镜片反光成像，前两代wrayflex不像普通单反那样拥有巨大突出的军舰部，形状更像是一台旁轴。按快门后反光镜抬起方式也是独一无二的向上向后收起。两个问题：取景窗较暗；和双反腰平取镜一样取镜内容左右颠倒
+1962年，WRAY被光学公司Hilger & Watts收购。
 
+1969年竞争对手Taylor, Taylor & Hobson（生产Cooke电影镜头的公司）又收购了Hilger and Watts。
 
-4. 没有过片扳手，而是把过片旋钮放在了机底正中间，拧动起来手感很扎实，每次转动像打开徕卡M的底盖
+最后在1971的七月，WRAY Optical Works，经历了120年岁月后，在伦敦南郊一条叫Ashgrove的路上正式倒闭，工厂和设备被变卖，员工被遣散。
 
-
-5. 普通wrayflex是银色的，且使用wrayflex独有的卡口。我这台被上一任机主改成了黑漆，卡口也被改为m42。故我又淘了一枚便宜的太苦玛smc 50 1.4接在上面.基本可以肯定，这台是全宇宙唯一一台的黑漆m42卡口的wrayflex。
+又过了大半个世纪里，这台Wrayflex Ia被某一位机主改成了黑漆M42口，流转到一位英国的eBay卖家手里，又辗转从伦敦运到了我手上。在一个晴朗秋天的周末，被我用银盐记录下了纽约中国城的几个瞬间。
