--- a/content/posts/2023/10/2023-10-23-wrayflex.zh.md
+++ b/content/posts/2023/10/2023-10-23-wrayflex.zh.md
@@ -128,4 +128,4 @@ Wrayflex最具有特色的设计，应该是前两代使用了两枚反光镜而
 
 最后在1971的七月，WRAY Optical Works，经历了120年岁月后，在伦敦南郊一条叫Ashgrove的路上正式倒闭，工厂和设备被变卖，员工被遣散。
 
-又过了大半个世纪里，这台Wrayflex Ia被某一位机主改成了黑漆M42口，流转到一位英国的eBay卖家手里，又辗转从伦敦运到了我手上。在一个晴朗秋天的周末，被我用银盐记录下了纽约中国城的几个瞬间。
+又过了大半个世纪，这台Wrayflex Ia被某一位机主改成了黑漆M42口，流转到一位英国的eBay卖家手里，又辗转从伦敦运到了我手上。在一个晴朗秋天的周末，被我用银盐记录下了纽约中国城的几个瞬间。
