--- a/content/posts/2023/10/2023-10-23-wrayflex.zh.md
+++ b/content/posts/2023/10/2023-10-23-wrayflex.zh.md
@@ -46,7 +46,7 @@ Wrayflex相机分为三代:
 
 1. 第一代Wrayflex I于1951年发布，成像面积24x32mm，每卷胶片可拍45张，反光镜取景，正面早期有两个闪光灯接口，后改为三个。大约生产了850台。
 2. 第二代Wrayflex Ia是小改款型，于1954年发布，成像面积更新为传统的24x36mm，有两个闪光灯接口。后期（1958年）在机顶加上了冷靴。大约1600台。
-3. 第三代Wrayflex II是大改款型，于1959年发布，反光镜取景改为了五棱镜取景，但反光板收缩机制依然是向上收缩，导致五棱镜位置很高，体积变大很多。可能是太丑了，只生产了大约300台。
+3. 第三代Wrayflex II是大改款型，于1959年发布，反光镜取景改为五棱镜取景，但反光板收缩机制依然是向上收缩，导致五棱镜位置很高，体积变大很多。可能是太丑了，只生产了大约300台。
 
 {{< img src="/images/2023/10/23/wray-crosssection1.jpg" title="Wrayflex结构图" caption="👆实机剖面图" >}}
 
@@ -106,7 +106,7 @@ Wrayflex最具有特色的设计，应该是前两代使用了两枚反光镜而
 
 # 样片
 
-只拍了一卷Ilford HP5，使用的镜头是福伦达赛破铜。自己第一次在家分装100英尺盘片的时候操作失误，产生了大量划痕。看个意思就好，本来成像也跟机身关系不大。大半个世纪过去了，这相机的快门速度倒还算准确。我用手机开slow-mo视频测了下，闪光同步速度大概是1/20秒。目前遇到的唯一问题是两片布帘快门在较高快门速度时的缝隙有一定概率会在横走到一半的时“关闭”，导致画面有一半未曝光（我猜是两篇布帘速度不一致导致的）。不知道这种小众机器该去哪里找师傅做保养。估计只能DIY了。
+只拍了一卷Ilford HP5，使用的镜头是福伦达赛破铜。自己第一次在家分装100英尺盘片的时候操作失误，产生了大量划痕。看个意思就好，本来成像也跟机身关系不大。大半个世纪过去了，这相机的快门速度倒还算准确。我用手机开slow-mo视频测了下，闪光同步速度大概是1/20秒。目前遇到的唯一问题是两片布帘快门在较高快门速度时的缝隙有一定概率会在横走到一半的时候“关闭”，导致画面有一半未曝光（我猜是两片布帘速度不一致导致的）。不知道这种小众机器该去哪里找师傅做保养。估计只能DIY了。
 
 {{< img src="/images/2023/10/23/sample-1.jpg" title="样片" caption="👆" >}}
 {{< img src="/images/2023/10/23/sample-2.jpg" title="样片" caption="👆" >}}
