--- a/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
+++ b/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
@@ -65,9 +65,11 @@ featured_image: 2023/12/03/pentax_lx_front.JPG
 
 # 还原
 ​
-修好了粘镜问题的LX真的香。搭配最近刚收的黑色二公主（SMC Pentax-FA 77mm F1.8 Limited）非常美。和香槟银大公主套机比显得更低调闷骚。
+修好了粘镜问题的LX真的香。搭配最近刚收的黑色二公主（SMC Pentax-FA 77mm F1.8 Limited）非常美。
 
-{{< img src="/images/2023/12/03/pentax_lx_with_mz5n.JPG" title="拍这张时饰皮胶水还没到，裸露的快门机构还挺蒸汽朋克风" caption="👆" >}}
+{{< img src="/images/2023/12/03/pentax_lx_no_leather.JPG" title="拍这张时饰皮胶水还没到，裸露的快门机构还挺蒸汽朋克风" caption="👆" >}}
+
+{{< img src="/images/2023/12/03/pentax_lx_with_mz5n.JPG" title="和香槟银大公主套机比显得更低调闷骚" caption="👆" >}}
 
 后来又淘来一个（被狗啃过的）二手原装手柄，接在机身上，小巧玲珑。过片手感很紧致细腻，让人忍不住想要拍下一张。说来也奇怪，之前我用那台尼康F3HP，明明贼靠谱，完全不出错，但用起来就是觉得有些“无聊”，带出门总嫌有点沉，感觉自己好像一个无情的拍照机器。换了这台一身毛病的LX，机身小巧，反而没那种压力，会更高兴带出门去。我可真贱。
 
