--- a/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
+++ b/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
@@ -75,6 +75,10 @@ featured_image: 2023/12/03/pentax_lx_front.JPG
 
 {{< img src="/images/2023/12/03/pentax_lx_front.JPG" title="搭配黑皮二公主很和谐" caption="👆" >}}
 
+除了公主头，LX拿来转接M42口镜头也是很不错的选择。所以我也搞了一枚拥有福伦达血统的蔡司凹玉，准备之后也试试。
+
+{{< img src="/images/2023/12/03/pentax_lx_ultron.JPG" title="搭配蔡司凹玉也很和谐" caption="👆" >}}
+
 算起来，目前经手的每一台宾得（六台）胶片机都有毛病，不是出掉就是自己修好。相比之下经手的三台尼康（FM，FE2，F3）只有FM出现了一点过片问题，而徕卡胶片机（M3，M4）一直没出过问题（两台M9有一台倒是脱膜了，不过那是数码机另说）。
 
 {{< img src="/images/2023/12/03/pentax_lx_with_leica_m3.JPG" title="过片手感依然还是M3一骑绝尘" caption="👆" >}}
