--- a/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
+++ b/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
@@ -39,7 +39,7 @@ featured_image: 2023/12/03/pentax_lx_front.JPG
 
 # 心痒
 
-时隔几个月，还是没法忘记LX的绝美手感，于是机缘巧合又从eBay淘了一台前期板LX的故障机（$130）。这次准备自己修理。卖家说这台机子有两个问题：
+时隔几个月，还是没法忘记LX的绝美手感，于是机缘巧合又从eBay淘了一台早期版本LX的故障机（$130）。这次准备自己修理。卖家说这台机子有两个问题：
 
 1. 测光和标准值差了几档；
 2. 粘镜。
@@ -107,3 +107,9 @@ featured_image: 2023/12/03/pentax_lx_front.JPG
 {{< img src="/images/2023/12/03/sample-14.jpg" title="样片" caption="👆" >}}
 {{< img src="/images/2023/12/03/sample-15.jpg" title="样片" caption="👆" >}}
 {{< img src="/images/2023/12/03/sample-16.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/12/03/sample-17.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/12/03/sample-18.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/12/03/sample-19.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/12/03/sample-20.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/12/03/sample-21.jpg" title="样片" caption="👆" >}}
+{{< img src="/images/2023/12/03/sample-22.jpg" title="样片" caption="👆" >}}
