--- a/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
+++ b/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
@@ -37,6 +37,15 @@ featured_image: 2023/12/03/pentax_lx_front.JPG
 
 {{< img src="/images/2023/12/03/mz5n-repair.jpg" title="替换iso塑料件时拍的。mz系列的塑料做工实在不耐操" caption="👆" >}}
 
+断了转盘的mz5n倒也勉强能继续用，在优胜美地和LA随意捏了些照片。
+
+{{< img src="/images/2023/12/03/PentaxZX5n-43mmF19-0003-positive-1.jpg" title="坏了的MZ5n拍的" caption="👆" >}}
+{{< img src="/images/2023/12/03/PentaxZX5n-43mmF19-0008-positive-2.jpg" title="坏了的MZ5n拍的" caption="👆" >}}
+{{< img src="/images/2023/12/03/PentaxZX5n-43mmF19-0012-positive-3.jpg" title="坏了的MZ5n拍的" caption="👆" >}}
+{{< img src="/images/2023/12/03/PentaxZX5n-43mmF19-0016-positive-4.jpg" title="坏了的MZ5n拍的" caption="👆" >}}
+{{< img src="/images/2023/12/03/PentaxZX5n-43mmF19-0028-positive-7.jpg" title="坏了的MZ5n拍的" caption="👆" >}}
+{{< img src="/images/2023/12/03/PentaxZX5n-43mmF19-0029-positive-8.jpg" title="坏了的MZ5n拍的" caption="👆" >}}
+
 # 心痒
 
 时隔几个月，还是没法忘记LX的绝美手感，于是机缘巧合又从eBay淘了一台早期版本LX的故障机（$130）。这次准备自己修理。卖家说这台机子有两个问题：
