--- a/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
+++ b/content/posts/2023/12/2023-12-03-pentax-lx.zh.md
@@ -80,7 +80,9 @@ featured_image: 2023/12/03/pentax_lx_front.JPG
 
 {{< img src="/images/2023/12/03/pentax_lx_with_mz5n.JPG" title="和香槟银大公主套机比显得更低调闷骚" caption="👆" >}}
 
-后来又淘来一个（被狗啃过的）二手原装手柄，接在机身上，小巧玲珑。过片手感很紧致细腻，让人忍不住想要拍下一张。说来也奇怪，之前我用那台尼康F3HP，明明贼靠谱，完全不出错，但用起来就是觉得有些“无聊”，带出门总嫌有点沉，感觉自己好像一个无情的拍照机器。换了这台一身毛病的LX，机身小巧，反而没那种压力，会更高兴带出门去。我可真贱。
+后来又淘来一个（被狗啃过的）二手原装手柄，接在机身上，小巧玲珑。过片手感很紧致细腻，让人忍不住想要拍下一张。
+
+说来也奇怪，之前我用那台尼康F3HP，明明贼靠谱，完全不出错，但用起来就是觉得有些“无聊”，带出门总嫌有点沉，感觉自己好像一个无情的拍照机器。换了这台一身毛病的LX，机身小巧，反而没那种压力，会更高兴带出门去。打个比方，LX像是柔弱的女孩子，老爱发脾气，需要费很多心力去照顾ta情绪。又是粘镜问题有容易无限远跑焦，翻来覆去的修，真是又爱又恨的虐恋。F3就靠谱太多了，是全心全意为我服务的最优秀的搭档，让ta做啥就做啥从不含糊从没坏过，上了战场甚至还能帮我挡子弹。然而到最后，我把F3卖了，只留下LX。我可真贱。
 
 {{< img src="/images/2023/12/03/pentax_lx_front.JPG" title="搭配黑皮二公主很和谐" caption="👆" >}}
 
