--- a/content/posts/2024/05/204-05-02-leica-cl.zh.md
+++ b/content/posts/2024/05/204-05-02-leica-cl.zh.md
@@ -1,5 +1,5 @@
 ---
-title: "替身成正主：徕卡CL与富士X100V"
+title: "替身上位：徕卡CL与富士X100V选谁？"
 date: 2024-05-02T01:17:02-04:00
 series:
 - camera
@@ -19,35 +19,53 @@ draft: true
 什么徕卡，只配给富士提鞋当个平替罢了（狗头）。
 <!--more-->
 
-# 碎碎念
+# 背景
 
-最近富士X100VI发布，疯狂出圈，预约爆表，一机难求，成为了现象级的网红产品。我之前写过一篇[文章](({{< ref "/posts/2023/03/2023-03-23-leica-x-typ-113.zh.md" >}}))，讲徕卡X Typ113可以当X100V的平替。现在新一代的X100VI都出来了，是时候来找找看x100vi的平替了。找了两台：
+最近富士X100VI发布，疯狂出圈，预约爆表，一机难求，成为了现象级的网红产品。我之前写过一篇[文章](({{< ref "/posts/2023/03/2023-03-23-leica-x-typ-113.zh.md" >}}))，讲徕卡X Typ113可以当X100V的平替。现在新一代的X100VI都出来了，是时候来找找看X100VI的平替了。
+
+找了两台：
 
 1. 第一台，当属最接近VI的替代品，上一代神机：X100V。V和VI造型基本一模一样，功能上最大的不同是V比VI少了传感器防抖和4000W高像素。但其实作为随身便携机，没有这两项完全够用。
-2. 第二台，是X Typ113的最终进化形态，徕卡APSC产品线最后的波纹：徕卡CL。作为L卡口的可换镜头半画幅无反相机，CL最大的玩点便是支持转接我手头一大堆徕卡M头。
+2. 第二台，是X Typ113的最终进化形态，也是徕卡APSC产品线最后的波纹：徕卡CL。作为L卡口的可换镜头半画幅无反相机，CL最大的玩点便是支持转接我手头一大堆旁轴和单反镜头。
 
-# 对比
+# 机身
 
 从机身造型来看，CL想必借鉴了徕卡螺口机（比如Leica iiif）的设计风格：机身修长而简洁，机顶的按钮拨盘和取景器却故意展露出复杂的轮廓线（尤其是取景器乍看很生硬的凸起形状），配合优异的做工和触感，有一种来自未来的复古感，喜欢这款设计的人会相当喜欢，对不上电波的人第一眼就摇摇头直接走开。相比之下，富士X100V的线条简洁明快，应该没人会觉得难看。最新的X100VI直接沿用相同造型啥也没变。确实没必要，够好看了。
 
 手感做工层面，只要同时摸过两台相机，结论就很简单，CL比X100V好。不是说X100V不好，但CL的按键拨盘触感紧致，阻尼和反馈恰到好处，真是没有对比就没有伤害。徕卡能把自己当奢侈品卖，对于“高级感”体验这块还是下了不少真功夫的。
 
-# 拍摄
+至于镜头，不得不感慨X100V作为一体机，镜头真的做得很小很薄，第五代改进了近摄素质也足够应付日常的拍摄记录需求。对比之下，给CL挂上非常小巧复古的VM Nokton 40mm f1.4也仅仅和加了遮光罩的X100V一样大，想再小点只能挂那种超薄的大光圈薯片镜头了。不过牺牲体积换来的可玩性，让CL可以随时根据拍摄需求装上新镜头，出片风格更加多样。
 
-今天着重对比了下带着M9，CL，X100v扫街的感受。发现富士这台X100v真的不适合扫街，最难受的点是快门可按性的不可预测：按快门前自动对焦合焦时刻的不确定性，按下快门后黑屏等待胶片模拟实时生成处理时间的不确定性。两者加在一起，每次按快门之前和之后都需要等待片刻，非常打乱拍摄的节奏，极大考验个人的耐心，让抓拍的体验支离破碎。换回徕卡CL和M9之后，快门非常干脆，时滞几乎不可感知，手动对焦指哪打哪，整个世界都清净了。
+# 体验
 
-今天带着这三台相机在同场景下拍摄，发现扫街抓拍我还是更习惯手动对焦。
+最近同时带着这两台平替去扫街，发现街拍我还是更习惯手动对焦。X100V我最难受的一点是快门生效的不可预测性：按快门前自动对焦合焦时刻的不确定性，加上按下快门松手后一定会有的一段黑屏时间（胶片模拟引擎实时生成图片的处理时间）的不确定性，两者加在一起，每次按快门之前和之后都需要等待不可预知的几秒，非常打乱拍摄的节奏，极大考验个人的耐心，让抓拍的体验支离破碎。对街拍这种需要精确控制快门捕捉决定性瞬间的需求，往往还是手动对焦或者超焦距拍摄更可靠。
 
-富士的问题在于每次按快门前需要等自动对焦合焦，按下快门后黑屏时间还需要等胶片模拟实时生成图片，前后等待得这两段时间很容易打乱我拍摄的节奏，错失抓拍的瞬间。
-
-相比之下，徕卡M9和CL的快门可预测性相当好，非常果断迅速。只要熟练掌握手动对焦就能指哪打哪。
-
-我把样张贴在后面了，各五张。p2-p6是x100v，p7-p11是CL，p12-p16是M9。值得一提的是，这次CL的镜头配的vm40 1.4和梅耶meyer lydith 30 f3.5，M9的镜头是rollei 40 2.8 hft。禄莱的松纳头味道相当好！
+与之相比，徕卡CL的快门果断迅速，时滞几乎不可感知，只要熟练掌握手动对焦就能指哪打哪，扫街抓拍的体验顺畅自如。
 
 
-于是回家就把X100v挂在小红书上，两个小时就被小姐姐要过去了。X100v确实还是更适合人像摆拍和静物特写。机内风格化的胶片模拟很适合网络分享，第一眼很讨喜，但看久了确实容易腻，没徕卡耐看。
+除了快门，还有一个影响体验的差异，是取景器。X100V的光电混合取景器很好玩，不过我90%情况下也都是用的电子取景器。相比之下，CL只有电子取景器，但是显示效果其实比X100V好很多，手动对焦时的体验很棒，峰值看得很清晰放大对焦反应也很迅速。
 
 
 # 样片
 
-画质非常细腻，完全没有富士那种涂抹感.
+先来富士X100V的样片。
+
+
+再来CL的样片。日常配的镜头是VM 40mm 1.4。
+
+
+也挂上梅耶meyer lydith 30mm f3.5拍了几张。
+
+
+目前已下单ZM 25 2.8，在来的路上了，之后有样张再补上。
+
+
+这次出门同时还把M9带上了，挂的镜头是rollei 40 2.8 hft。禄莱这枚小巧的松纳头味道相当好，顺手发几张样片在这里。
+
+# 后续
+
+由于不太理想的体验，这趟扫街拍完回家我就顺手把X100V挂在小红书上了。没想到即使不是最新代的X100VI，流通率依然高得离谱，刚发布两个小时就被本地小姐姐收走了，是我出手最快的器材，简直比徕卡镜头更硬通货。平心而论，X100V虽然不符合我拿来扫街的需求，但日常使用确实比转接M镜头手动对焦的CL更方便，很符合小姐姐带出门和好姐妹喝下午茶时，人像摆拍和静物特写的需求。机内风格化的胶片模拟很适合网络分享，第一眼相当讨喜，拿来发小红书或者朋友圈完全不在话下。
+
+相比之下，CL出片风格倒是秉承了徕卡一贯的色彩倾向，第一眼并不会觉得惊艳，但放大对比确实没有富士XTrans传感器的那种祖传的涂抹感，属于细腻耐看的风格。直出JPG可以选的滤镜模式并不多，彩色的三款滤镜并不算出彩，我最喜欢的是黑白的两个模式，影调丰富而细腻，所以现在默认选高对比黑白，同时留一份DNG回家自己后期彩色。
+
+看网上讨论如此热烈，我本来是对X100V抱更大期待的，但没想到最后留下的是CL这台无人问津也已停产的小众机型，看来注定追不上潮流，当不了富家子弟，只能在家默默玩下西德产的富士平替了。
